Fix next opening not showing the opening of the day on the day.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -299,6 +299,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   gap: 10px;
 }
 .menuItemSpecial .column .image {
