--- a/src/scss/_MenuItemSpecial.scss
+++ b/src/scss/_MenuItemSpecial.scss
@@ -26,6 +26,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
             gap: 10px;
         }
 
